exports[`dropDown Test normal 1`] = `
<div
  className="zad-dropdown">
  <ButtonGroup>
    <Button
      disabled={false}
      onClick={[Function]}
      type="ghost">
      DropDown
    </Button>
    <Button
      disabled={false}
      onClick={[Function]}
      type="ghost">
      <Icon
        name="angle-down" />
    </Button>
  </ButtonGroup>
  <Animate
    animation={Object {}}
    component="span"
    componentProps={Object {}}
    onAppear={[Function]}
    onEnd={[Function]}
    onEnter={[Function]}
    onLeave={[Function]}
    transitionAppear={false}
    transitionEnter={true}
    transitionLeave={true}
    transitionName="slide-up">
    <div
      className="zad-dropdown-items">
      <DropDownItem
        name="中国1-China"
        onClick={[Function]}
        type="normal" />
      <DropDownItem
        name="日本1-Japan"
        onClick={[Function]}
        type="normal" />
      <DropDownItem
        name="美国1-USA"
        onClick={[Function]}
        type="normal" />
      <DropDownItem
        name="二级菜单"
        onClick={[Function]}
        type="sub">
        <DropDownItem
          name="中国2-China"
          onClick={[Function]}
          type="normal" />
        <DropDownItem
          name="日本2-Japan"
          onClick={[Function]}
          type="normal" />
        <DropDownItem
          name="美国2-USA"
          onClick={[Function]}
          type="normal" />
        <DropDownItem
          name="三级菜单"
          onClick={[Function]}
          type="sub">
          <DropDownItem
            name="中国3-China"
            onClick={[Function]}
            type="normal" />
          <DropDownItem
            name="日本3-Japan"
            onClick={[Function]}
            type="normal" />
          <DropDownItem
            name="美国3-USA"
            onClick={[Function]}
            type="normal" />
        </DropDownItem>
      </DropDownItem>
    </div>
  </Animate>
</div>
`;

exports[`dropDown Test normal 2`] = `
<div
  className="zad-dropdown">
  <ButtonGroup>
    <Button
      disabled={false}
      onClick={[Function]}
      type="ghost">
      DropDown
    </Button>
    <Button
      disabled={false}
      onClick={[Function]}
      type="ghost">
      <Icon
        name="angle-down" />
    </Button>
  </ButtonGroup>
  <Animate
    animation={Object {}}
    component="span"
    componentProps={Object {}}
    onAppear={[Function]}
    onEnd={[Function]}
    onEnter={[Function]}
    onLeave={[Function]}
    transitionAppear={false}
    transitionEnter={true}
    transitionLeave={true}
    transitionName="slide-up" />
</div>
`;
